--- a/roles/LNX_BASIC_INSTALL/tasks/main.yml
+++ b/roles/LNX_BASIC_INSTALL/tasks/main.yml
@@ -7,4 +7,5 @@
     - wget
     - net-tools
     - nmap
+    - bind-utils
   when: ansible_pkg_mgr == 'apt' or ansible_pkg_mgr == 'dnf' or ansible_pkg_mgr == 'yum'
