--- a/roles/LNX_BASIC_INSTALL/tasks/main.yml
+++ b/roles/LNX_BASIC_INSTALL/tasks/main.yml
@@ -8,4 +8,5 @@
     - net-tools
     - nmap
     - bind-utils
+    - traceroute
   when: ansible_pkg_mgr == 'apt' or ansible_pkg_mgr == 'dnf' or ansible_pkg_mgr == 'yum'
